<resources>
    <string name="app_name">Chat Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="gender">gender</string>
    <string name="accept_notifications">Accept Notifications</string>
    <string name="log_out">LOG OUT</string>
    <string name="send">SEND</string>
    <string name="message_text">message text</string>
    <string name="my_friend">my friend</string>
    <string name="message_sent">Message is sent</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth Date</string>
    <string name="invalid_value">Invalid value</string>
    <string name="sample_name">John Doe</string>
    <string name="sample_letter">J</string>
    <string name="sample_message">Sample message</string>
    <string name="sample_username">username</string>
    <string name="sample_password">password</string>
    <string name="sample_email">email@example.com</string>
    <string name="sample_fname1">John</string>
    <string name="sample_lname1">Doe</string>
    <string name="sample_fname2">Jane</string>
    <string name="sample_lname2">Doe</string>
    <string name="sample_fname3">Petar</string>
    <string name="sample_lname3">Petrovic</string>
    <string name="sample_fname4">Milica</string>
    <string name="sample_lname4">Damjanovic</string>
    <string name="my_chat_list">My chat list</string>
    <string name="open_conversation">Open conversation</string>
    <string name="username_exists">Username already exist</string>
    <string name="username_does_not_exists">Username does not exist</string>
    <string name="error">Error</string>
    <string name="user_registered">User registered</string>
    <string name="user_logged_in">Logged in</string>
    <string name="refresh">REFRESH</string>
    <string name="enter_message">Enter message</string>
    <string name="unknown_error">UNKNOWN ERROR</string>
    <string name="unable_to_send_message">Unable to send message</string>
    <string name="logged_out">Logged out</string>
    <string name="wrong_user_pass">Wrong username/password</string>
    <string name="username_taken">Username already taken</string>
    <string name="new_message">You have new message(s)</string>
</resources>
